Fix for overflowing content

--- a/uabunited/site-specific.css
+++ b/uabunited/site-specific.css
@@ -179,6 +179,9 @@ body.ribbonFullwidth #whitebar {
     bottom:0
 }
 
+#wrapper {
+    overflow:hidden;
+}
 
 
 
